--- a/_posts/2020-02-25-blog-DTI.md
+++ b/_posts/2020-02-25-blog-DTI.md
@@ -28,7 +28,10 @@ DICOM is usually the data format downloaded form the scanner or the PACS system.
 4. **Number Of Images In Mosaic:**
 Siemens stores 3D images in a 2D grid where at each grid point, there is another 2D image. So the number of mosaic field is used to reconstruct the 3D image from this 2D grid. https://nipy.org/nibabel/dicom/dicom_mosaic.html
 
-5. Toolbox `pydicom`:
+5. Toolbox `MIPAV`:
+This is a C toolbox that can be uses to anonymize DICOM files and view DICOM header in a GUI.
+
+6. Toolbox `pydicom`:
 This is a python package and can edits DICOM header. Some examples are:
 ```
 # add new tag
@@ -58,8 +61,12 @@ ds.NumberOfImagesInMosaic = 37
 ```
 Notes: the outcome of this code is the same as the previous one -- a new tag named as 'private tag' located at (0019, 100a).The change of the dictionary will be gone once exit python. 
 
-6. Toolbox `MIPAV`:
-This is a C toolbox that can be uses to anonymize DICOM files and view DICOM header in a GUI.
+7. Value representation:
+In dicome header, files are saved in bytes. We need to define [VR](http://dicom.nema.org/dicom/2013/output/chtml/part05/sect_6.2.html) so that the software knows how to read the header. 
+
+8. Header Tags:
+(http://dicom.nema.org/medical/dicom/current/output/chtml/part06/chapter_6.html)
+
 
 ### DTI basics
 1. B0 image and T2 shine-through:
@@ -87,11 +94,15 @@ However, some issue may happen because of the anonymization process. For instanc
   * https://www.nitrc.org/forum/forum.php?thread_id=10016&forum_id=4703
   * The link above says how old dcm2nii is estimating the (0019, 100A) when it is missing. But it is very inaccurate.
 
-
+After the DICOM with all private tags are acquired, problems like missing slices may also be encountered. Take patient Subject 16 from Dr. Zhang for example, I had 1000 DICOM, there are 30 different distances from the first slide (which means there are 30 slides in one volume), however, for one distance, I could have 33 DICOM, and others I could have 34, which means I had missing DICOM files. I suppose to have 34 directions with 30 slices in each volume, but now, I have missing slices for the last volume. To find the slices for the first 33 volume, and discard the last incomplete volume, run ```dcm2niix -f %t/%s_%p/%4r.dcm -r y ~/Neuro/issuex/```
+```-r``` means no converting, just rename the files. ```%t/%s_%p/%4r.dcm``` means 
+session_date_and_time/series_protocol_name/instance_number(from 0020,0013). More [naming rules](https://raw.githubusercontent.com/rordenlab/dcm2niix/master/FILENAMING.md).
+After renaming, I can remove all filenames larger than 990 and run the conversion. For the discussion regarding the question, see [here](https://github.com/rordenlab/dcm2niix/issues/379).
 
 
 ### Steps for DTI processing
-* FSL references, important ones, I need to read those first
+1. Convert DICOM to 4D NifiTi: see the previous section
+```dcm2niix```* FSL references, important ones, I need to read those first
   * http://wikis.la.utexas.edu/imagelab/book/how-prepare-your-dti-images-diffusivity-analysis.html
   * https://www.cabi.gatech.edu/CABI/archives/resources/dti-analysis/
   * http://justinblaber.org/brief-introduction-to-dwmri/ I finished the part before step 4.
