--- a/_posts/2018-07-06-blog-nn.md
+++ b/_posts/2018-07-06-blog-nn.md
@@ -10,18 +10,18 @@ categories:
 (Many are copied from Sun, 2019 Optimization paper)
 
 ## Optimization
-![generaization_error]({{site.url}}{{site.baseurl}}/assets/images/generaization_error.png)
+![generaization_error]({{site.url}}{{site.baseurl}}/assets/images/nn/generaization_error.png)
 So, even if we find the global minimum of the loss function (no estimzation error) and the optimal classcification boundary is learnable by the network (function space is large enough so that there are no approximation error), the loss function is just a proxy for the classcification error, the minimum for the loss is not the best boundary.(we still have the error caused by sampling).
 
 ### Gradient descents and its variants:
-![sgd]({{site.url}}{{site.baseurl}}/assets/images/sdg.png)
+![sgd]({{site.url}}{{site.baseurl}}/assets/images/nn/sgd.png)
 [Ref](https://ruder.io/optimizing-gradient-descent/index.html#challenges)
 
 ### Momentum
 * Keeps a running average of the gradient, usually keeps to be 0.9old, 0.1new.
 * Move more to the direction with more loss drop. If the direction oscilates, then the running average should be small. Then move less to that direction.
 * Nestorov's accelerated gradient: first extended the previous step and calcualted the gradient at the new place.
-![nc]({{site.url}}{{site.baseurl}}/assets/images/Nesterov+Accelerated+Gradient.png)
+![nc]({{site.url}}{{site.baseurl}}/assets/images/nn/Nesterov_Accelerated_Gradient.jpg)
 
 ### Some learning rate scheduling techniques
 * Vanilla SGD: divide the step-size by a ﬁxed constant once every few epochs or divide by a constant when stuck.
