--- a/_posts/2019-07-12-blog-bs-fs.md
+++ b/_posts/2019-07-12-blog-bs-fs.md
@@ -41,7 +41,7 @@ can map ```*h.pial``` to the original MRI space. Then, use the same way to proce
 
 However, from my experiments: 
 1. We need to use a coronal sliced MRI as the freesurfer input. When use ```mri_info``` in freesufer to check the ```rawavg.mgz```, it should be in ```LIA``` coordinate (the same as the coordinate of ```T1.mgz```). If the ```rawavg.mgz``` is in ```RAS``` or others, it will not work.
-2. Use the *import surfaces* and *check MRI/surface coregisteration* in Matlab, the sulcus and gyrus can match perfectly with the MRI. However, if I plot the CAT cortex and freesurfer cortex in Matlab in the command line, there seems to be small coordinate shift. Also, if I import ```*h.pial.native``` into Curry 8 and *import  to MRI*, I can also observe this coordinate shift. I am not certain about the reason. 
+2. Use the *import surfaces* and *check MRI/surface coregisteration* (Brainstorm code: ```panel_surface.m``` --> ```tess_tri_interp.m```, ```tess_tri_interp_data.m```) in Matlab, the sulcus and gyrus can match perfectly with the MRI. However, if I plot the CAT cortex and freesurfer cortex in Matlab in the command line, there seems to be small coordinate shift. Also, if I import ```*h.pial.native``` into Curry 8 and *import surface to MRI*, I can also observe this coordinate shift. I am not certain about the reason. 
 
 ### References:
 1. [The code for import surface mesh in brainstorm](https://github.com/brainstorm-tools/brainstorm3/blob/5f58d6a314209a5ba4fbd7b7e7caeda45e12e5eb/toolbox/io/in_tess.m#L162)
